--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
-<!-- saved from url=(0031)http://localhost/Philly-Phacts/ -->
-<html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-	
+<html>
+<head>
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<title>This is a blog post title</title>
 </head>
 <body>
@@ -51,6 +51,5 @@
 		</h4>
 	<p></p>
 	<h6>Philly Phacts, 2011</h6>
-
-
-</body></html>
+</body>
+</html>
