updated static content

--- a/index.html
+++ b/index.html
@@ -1,33 +1,41 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
-<!-- saved from url=(0031)http://localhost/Philly-Phacts/ -->
-<html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-	
-	<title>This is a blog post title</title>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN"
+            "http://www.w3.org/TR/html4/strict.dtd">
+<html>
+<head>
+	<meta http-equiv="Content-Type" content="text/html;charset=utf-8">
+	<title>This is a blog post</title>
 </head>
 <body>
 	<h1>Philly Phacts</h1>
 	<ul>
 		<li>foo</li>
+
 		<li>bar</li>
 		<li>baz</li>
 		<li>bing</li>
 		<li>bang</li>
 		<li>boom</li>
 	</ul>
-	<h2>This is a blog post title</h2>
-	<p>
-		This is a blog post
-	</p>
-	<p>
-		</p><h4 class="author">
-			<em>Written by <strong>Matt McDonald</strong></em> on Tuesday, August 2nd, 2011 at 9:34 pm
-		</h4>
-		<h5 class="tags">
-			<em>Tags: foo,  bar,  baz</em>
-		</h5>
-	<p></p>
+
+	<div>
+		<h2>This is a blog post</h2>
+		<p>
+			Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in diam nisl. Aliquam erat volutpat. Integer augue diam, scelerisque in accumsan sit amet, pretium scelerisque mi. Donec hendrerit justo sit amet libero consequat a porttitor elit posuere. In vel tincidunt ligula. Praesent scelerisque nulla eget risus elementum nec elementum dui ullamcorper. Donec tristique iaculis velit eu consequat. Vestibulum sed nisl at magna tincidunt ornare. Pellentesque eu dictum velit. Nunc a auctor metus. Etiam egestas, justo vitae mattis tempus, ante enim aliquam justo, vel commodo ligula erat at leo. Nullam eget commodo libero. Quisque suscipit lacus nec justo mattis eu placerat tortor congue.
+		</p>
+		<p>
+			<h4 class="author">
+				<span class="userinfo author">
+					<em>Written by <a href="users/1/"><strong>Matt McDonald</strong></a> on Monday, August 8th, 2011 at 10:00 am</em>
+
+				</span>
+			</h4>
+			<h5 class="tags">
+				<em>Tags: this, is, a, blog, post</em>
+			</h5>
+		</p>
+	</div>
 	<h6>Philly Phacts, 2011</h6>
+
 	<!-- scripts go here -->
-
-
-</body></html>
+</body>
+</html>
